[package]
name = "lomo-photo-viewer"
version = "1.0.2"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "4"
rfd = "0.15"
rusqlite = { version = "0.31", features = ["bundled"] }
argon2 = "0.5"
base64 = "0.22"

[build-dependencies]
tauri-build = { version = "2", features = [] }
